<resources>
    <string name="app_name">عینکی</string>
    <string name="btn_send">ارسال</string>
    <string name="btn_confirm">تایید</string>
    <string name="btn_pick">انتخاب</string>
    <string name="btn_more">همه</string>
    <string name="label_register">ثبت‌نام</string>
    <string name="label_support_ticket">ارسال تیکت پشتیبانی</string>
    <string name="label_provinces">انتخاب استان</string>
    <string name="label_support_ticket_type">انتخاب نوع تیکت</string>
    <string name="label_cities">انتخاب شهرستان</string>
    <string name="label_login">ورود</string>
    <string name="label_verification_code_">کد فعالسازی</string>
    <string name="hint_name">نام</string>
    <string name="hint_family">نام خانوادگی</string>
    <string name="hint_name_and_family">نام و نام‌خانوادگی</string>
    <string name="hint_phone">تلفن</string>
    <string name="hint_password">رمز عبور</string>
    <string name="hint_password_confirm">تکرار رمز عبور</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_national_code">کد ملی</string>
    <string name="hint_address">آدرس</string>
    <string name="hint_postal_code">کد پستی</string>
    <string name="hint_email">ایمیل</string>
    <string name="hint_title">عنوان</string>
    <string name="hint_more_detail">توضیحات تکمیلی</string>
    <string name="label_confirm">تایید</string>
    <string name="label_sffa">SFFA</string>
    <string name="label_company">استودیو طراحی و تولید اپلیکیشن</string>
    <string name="label_forget_password">فراموشی رمز عبور؟</string>
    <string name="label_forget_password_normal">فراموشی رمز عبور</string>
    <string name="label_create_acoount">آیا حساب کاربری ندارید؟</string>
    <string name="label_ainaki">عینکی</string>
    <string name="label_phone">شماره تلفن خود را وارد کنید</string>
    <string name="text_forget_password">ایمیل خود را وارد نمایید، ما نحوه تغییر رمز عبور را برای شما ارسال خواهیم کرد</string>
    <string name="m_icon_star">star</string>
    <string name="label_faq">سوالات متداول</string>
    <string name="label_refresh_sms">در صورت عدم دریافت کد تایید اینجا کلیک کنید</string>
    <string name="label_favorite">علاقه مندی ها</string>
    <string name="label_lens_list">لیست لنزها</string>
    <string name="label_edit_profile">ویرایش حساب کاربری</string>
    <string name="label_log_out_profile">خروج از حساب کاربری</string>
    <string name="label_accessory">لوازم جانبی</string>
    <string name="label_purchase">خریدها</string>
    <string name="label_list_glass">لیست عینک ها</string>
    <string name="label_setting">تنظیمات</string>
    <string name="label_profile">حساب کاربری</string>
    <string name="label_aboutus">درباره ما</string>
    <string name="label_ticket">ارسال تیکت پشتیبانی</string>
    <string name="label_gender">جنسیت</string>
    <string name="label_birth_date">تاریخ تولد</string>
    <string name="label_choose_face_size">اندازه صورت خود را انتخاب کنید:</string>
    <string name="label_choose_face_shape">شکل صورت خود را انتخاب کنید:</string>
    <string name="label_choose_face_color">انتخاب رنگ صورت:</string>
    <string name="label_face_width">عریض</string>
    <string name="label_face_normal">معمولی</string>
    <string name="label_face_narrow">باریک</string>
    <string name="label_face_circular">گرد</string>
    <string name="label_face_square">مربعی</string>
    <string name="label_lens">لنز</string>
    <string name="label_sunglass">آفتابی</string>
    <string name="label_eyeglass">طبی</string>
    <string name="label_try_again">تلاش مجدد در: </string>
    <string name="label_try_again_btn">تلاش مجدد</string>
    <string name="label_second">ثانیه</string>
    <string name="btn_users_comment">نظرات کاربران</string>
    <string name="btn_description">توضیحات</string>
    <string name="btn_product_Specifications">باید به چشم ها ایمان داشت.
چشم ها دنیایی دارند که در آن به راحتی میتوان راست و دروغ و زیر و بم حرف آدمها را فهمید.
دنیایی که میتواند در لحظه برایمان تنفر یا ترحم را انتخاب کند.
زندگی در چنین دنیایی زیباست چرا که شرط اول دلربایی چشمهایش هستند، اما در مقابل ترسناک هم هست چون همین چشم ها نقطه ضعف دلبستگی اند.
میگم ترسناک چون در این دنیا نفس به نفست بسته است به چشم هایش و اگر به رویت بسته شوند مثل این که یکی گلوت تا سر حد مرگ فشار بده اما هنوز چندتایی نفس برایت باقی مانده باشد اما همین از چشم هایش بیفتی یعنی نه زندگی وجود داره و نه چند نفس آخری یعنی مرگ به معنای واقعی.
قبل از ترسناک بودن گفتم که زیباست دوباره هم میگم که زیباست چون آخرین باری که به دنیای چشم هایش سفر کردم دختر بچه ای را دیدم که کهنه عشقی را به آغوش گرفته و بال بال میزند برای دوباره متولد شدنش، مطمئنم کهنه عشق در او متولد میشود حتی اگر من در آن نباشم، مطمئنم دنیای زیبایی چشم هایش را بند نخواهد آورد.
مطمئنم چون به چشم هایش ایمان دارم.</string>
    <string name="label_currency">تومان</string>
    <string name="label_face_triangular">مثلثی</string>
    <string name="label_Phone_text">09xxxxxxxxx</string>
    <string name="label_verification_code">کد فعالسازی(12345)</string>
    <string name="label_Phone_hit">جهت دریافت کد فعالسازی، شماره تلفن خود را وارد کنید</string>
    <string name="nav_open">باز کردن منو</string>
    <string name="nav_close">بستن منو</string>


    <string name="m_icon_like">thumb_up_alt</string>
    <string name="m_icon_dislike">thumb_down_alt</string>

    <string name="m_icon_bookmark_off">turned_in_not</string>
    <string name="m_icon_bookmark_on">turned_in</string>

    <string name="m_icon_telegram">w</string>
    <string name="m_icon_instagram">x</string>

    <string name="m_icon_location">place</string>
    <string name="m_icon_share">share</string>
    <string name="m_icon_public">public</string>
    <string name="m_icon_favorite_border">favorite_border</string>
    <string name="m_icon_favorite">favorite</string>
    <string name="m_icon_shopping_basket">shopping_basket</string>
    <string name="m_icon_shopping_cart">shopping_cart</string>
    <string name="m_icon_email">email</string>
    <string name="m_icon_add_a_photo">add_a_photo</string>
    <string name="m_icon_lens">remove_red_eye</string>
    <string name="m_icon_settings">settings</string>
    <string name="m_icon_bug_report">bug_report</string>
    <string name="m_icon_contact_support">contact_support</string>
    <string name="m_icon_help">help</string>
    <string name="m_icon_report">report</string>
    <string name="m_icon_expand_more">expand_more</string>
    <string name="m_icon_expand_less">expand_less</string>

    <string-array name="months">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
        </string-array>

    <array name="provinces">
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
        <item>sfsfsf</item>
    </array>

    <string name="error_user_email_empty">لطفا ایمیل خود را وارد نمایید</string>
    <string name="error_user_email_invalid">ایمیل وارد شده نامعتبر میباشد</string>
    <string name="error_user_password_empty">لطفا رمزعبور خود را وارد نمایید</string>
    <string name="error_user_password_invalid">رمزعبور وارد شده نادرست میباشد</string>
    <string name="error_user_phone_empty">لطفا شماره موبایل خود را وارد نمایید</string>
    <string name="error_user_phone_invalid">شماره به درستی وارد نشده است.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
