<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/label_ainaki"
                android:textSize="@dimen/_36sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_180dp"
                android:layout_height="@dimen/_180dp"
                android:layout_marginTop="@dimen/_16dp"
                app:srcCompat="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_32dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:weightSum="7">

                <ImageView
                    android:id="@+id/imgInstagram"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:src="@drawable/ic_instagram"
                   />

                <TextView
                    android:id="@+id/txtWeb"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/m_icon_public"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_36sp" />

                <TextView
                    android:id="@+id/txtShare"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:layout_weight="1"
                    android:text="@string/m_icon_share"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_36sp" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/m_icon_email"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_36sp" />

                <TextView
                    android:id="@+id/txtRate"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/m_icon_star"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_36sp" />

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:text="@string/m_icon_location"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_36sp" />

                <ImageView
                    android:id="@+id/imgTelegram"
                    android:layout_width="@dimen/_36dp"
                    android:layout_height="@dimen/_36dp"
                    android:layout_margin="@dimen/_4dp"
                    android:src="@drawable/ic_telegram"
                    />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSFFA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_ssfa"
                android:textSize="@dimen/_42sp" />

            <TextView
                android:id="@+id/txtCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/label_company"
                android:textSize="@dimen/_24sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>